--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/dvicencio/RiskScorescvd/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/dvicencio/RiskScorescvd/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The goal of RiskScorescvd is to ...
+The goal of RiskScorescvd is to calculate the most commonly used cardiovascular risk scores
 
 ## Installation
 
@@ -36,21 +36,49 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(RiskScorescvd)
-## basic example code
+# Create a data frame or list with the necessary variables
+ # Set the number of rows
+ num_rows <- 100
+ 
+ # Create a larger dataset with 100 rows
+  cohort_xx <- data.frame(
+   typical_symptoms.num = as.numeric(sample(0:6, num_rows, replace = TRUE)),
+   ecg.normal = as.numeric(sample(c(0, 1), num_rows, replace = TRUE)),
+   abn.repolarisation = as.numeric(sample(c(0, 1), num_rows, replace = TRUE)),
+   ecg.st.depression = as.numeric(sample(c(0, 1), num_rows, replace = TRUE)),
+   Age = as.numeric(sample(30:80, num_rows, replace = TRUE)),
+   diabetes = sample(c(1, 0), num_rows, replace = TRUE),
+   smoker = sample(c(1, 0), num_rows, replace = TRUE),
+   hypertension = sample(c(1, 0), num_rows, replace = TRUE),
+   hyperlipidaemia = sample(c(1, 0), num_rows, replace = TRUE),
+   family.history = sample(c(1, 0), num_rows, replace = TRUE),
+   atherosclerotic.disease = sample(c(1, 0), num_rows, replace = TRUE),
+   presentation_hstni = as.numeric(sample(10:100, num_rows, replace = TRUE)),
+   Gender = sample(c("male", "female"), num_rows, replace = TRUE),
+   sweating = as.numeric(sample(c(0, 1), num_rows, replace = TRUE)),
+   pain.radiation = as.numeric(sample(c(0, 1), num_rows, replace = TRUE)),
+   pleuritic = as.numeric(sample(c(0, 1), num_rows, replace = TRUE)),
+   palpation = as.numeric(sample(c(0, 1), num_rows, replace = TRUE)),
+   ecg.twi = as.numeric(sample(c(0, 1), num_rows, replace = TRUE)),
+   second_hstni = as.numeric(sample(1:200, num_rows, replace = TRUE)),
+   killip.class = as.numeric(sample(1:4, num_rows, replace = TRUE)),
+   systolic.bp = as.numeric(sample(0:300, num_rows, replace = TRUE)),
+   heart.rate = as.numeric(sample(0:300, num_rows, replace = TRUE)),
+   creat = as.numeric(sample(0:4, num_rows, replace = TRUE)),
+   cardiac.arrest = as.numeric(sample(c(0, 1), num_rows, replace = TRUE)),
+   previous.pci = as.numeric(sample(c(0, 1), num_rows, replace = TRUE)),
+   previous.cabg = as.numeric(sample(c(0, 1), num_rows, replace = TRUE)),
+   aspirin = as.numeric(sample(c(0, 1), num_rows, replace = TRUE)),
+   number.of.episodes.24h = as.numeric(sample(0:20, num_rows, replace = TRUE)),
+   total.chol = as.numeric(sample(5:100, num_rows, replace = TRUE)),
+   total.hdl = as.numeric(sample(2:5, num_rows, replace = TRUE)),
+   Ethnicity = sample(c("white", "black", "asian", "other"), num_rows, replace = TRUE)
+ )
+
+
+ # Call the function with the cohort_xx
+
+ new_data_frame <- calc_scores(data = cohort_xx)
+ 
+ summary(new_data_frame)
 ```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
