--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,17 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/dvicencio/RiskScorescvd/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/dvicencio/RiskScorescvd/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The goal of RiskScorescvd is to calculate the most commonly used cardiovascular risk scores
+The goal of RiskScorescvd r package is to calculate the most commonly used cardiovascular risk scores
+
+We have developed five of the most commonly used risk scores with a dependency (ASCVD [PooledCohort]) making the following available:
+
+* HEART
+* EDACS
+* GRACE 2.0
+* TIMI
+* SCORE2/OP
+* ASCVD
+
 
 ## Installation
 
