--- a/README.Rmd
+++ b/README.Rmd
@@ -39,6 +39,144 @@ You can install the development version of RiskScorescvd from [GitHub](https://g
 # install.packages("devtools")
 devtools::install_github("dvicencio/RiskScorescvd")
 ```
+## Required variables for each risk score
+
+```{r Plot, echo=FALSE, message=FALSE}
+library(tidyverse)
+index <- c(
+  "Age",
+  "Gender",
+  "diabetes",
+  "smoker",
+  "hypertension",
+  "hyperlipidaemia",
+  "family.history",
+  "ecg.st.depression",
+  "presentation_hstni",
+  "typical_symptoms.num",
+  "ecg.normal",
+  "abn.repolarisation",
+  "atherosclerotic.disease",
+  "sweating",
+  "pain.radiation",
+  "pleuritic",
+  "palpation",
+  "ecg.twi",
+  "Δ2nd_hstni",
+  "killip.class",
+  "systolic.bp",
+  "heart.rate",
+  "creat",
+  "previous.pci",
+  "previous.cabg",
+  "number.of.episodes.24h",
+  "aspirin",
+  "total.chol",
+  "total.hdl",
+  "Ethnicity"
+)
+
+# Define function to create heatmap
+create_heatmap <- function(index, size, title = FALSE) {
+  
+  # Create data frame
+  df <- data.frame(variable = index)
+  
+  # Define the variable groupings for each score
+  groups <- list(
+    HEART = c("typical_symptoms.num", "ecg.normal", "abn.repolarisation", "ecg.st.depression", "Age", "diabetes", "smoker", "hypertension", "hyperlipidaemia", "family.history", "atherosclerotic.disease", "presentation_hstni", "Gender"),
+    EDACS = c("Age", "Gender", "diabetes", "smoker", "hypertension", "hyperlipidaemia", "family.history", "sweating", "pain.radiation", "pleuritic", "palpation", "ecg.st.depression", "ecg.twi", "presentation_hstni", "Δ2nd_hstni"),
+    GRACE = c("killip.class", "systolic.bp", "heart.rate", "Age", "Gender", "creat", "ecg.st.depression", "presentation_hstni"),
+    TIMI = c("Age", "hypertension", "hyperlipidaemia", "family.history", "diabetes", "smoker", "previous.pci", "previous.cabg", "aspirin", "number.of.episodes.24h", "ecg.st.depression", "presentation_hstni", "Gender"),
+    ASCVD = c("Gender", "Ethnicity", "Age", "total.chol", "total.hdl", "systolic.bp", "hypertension", "smoker", "diabetes"),
+    SCORE2 = c("Age", "Gender", "smoker", "systolic.bp", "Diabetes", "total.chol", "total.hdl")
+  )
+
+  # Create new columns with the groupings
+  df <- df %>%
+    mutate(
+      HEART = ifelse(variable %in% groups$HEART, 1, 0),
+      EDACS = ifelse(variable %in% groups$EDACS, 1, 0),
+      'GRACE 2.0' = ifelse(variable %in% groups$GRACE, 1, 0),
+      TIMI = ifelse(variable %in% groups$TIMI, 1, 0),
+      ASCVD = ifelse(variable %in% groups$ASCVD, 1, 0),
+      'SCORE2/OP' = ifelse(variable %in% groups$SCORE2, 1, 0)
+    )
+  
+  # Reshape the data for plotting
+  dt2 <- df %>%
+    pivot_longer(cols = HEART:'SCORE2/OP', names_to = "Score", values_to = "Value") %>%
+    mutate(
+      variable = factor(variable, levels = index),
+      Score = factor(Score, levels = c("HEART", "EDACS", "GRACE 2.0", "TIMI", "ASCVD", "SCORE2/OP"))
+    )
+  
+  # Plot the heatmap
+  ggplot(dt2, aes(x = Score, y = variable, fill = as.character(Value))) +
+    geom_tile(color = "white", linewidth = 1,
+              linetype = 1) +
+    scale_fill_discrete("Required", labels = c('No', 'Yes')) +
+    labs(title = ifelse(title == TRUE, "Heatmap of Variables Used for Each Risk Score", ""),
+         x = "Risk Score",
+         y = "Variable",
+         fill = "Included in Score") +
+    scale_y_discrete(labels=c("Age",
+                              "Sex",
+                              "Diabetes",
+                              "Smoker",
+                              "Hypertension",
+                              "Hyperlipidaemia",
+                              "Family History",
+                              "ECG ST Depression",
+                              "Presentation HSTnI",
+                              "Typical Symptoms Num",
+                              "ECG Normal",
+                              "Abnormal Repolarisation",
+                              "Atherosclerotic Disease",
+                              "Sweating",
+                              "Pain Radiation",
+                              "Pleuritic",
+                              "Palpation",
+                              "ECG TWI",
+                              "Δ2nd HSTnI",
+                              "Killip Class",
+                              "Systolic BP",
+                              "Heart Rate",
+                              "Creatine",
+                              "Previous PCI",
+                              "Previous CABG",
+                              "Number of Episodes 24h",
+                              "Aspirin",
+                              "Cholesterol",
+                              "HDL",
+                              "Ethnicity")) +
+    theme(legend.position = "bottom",
+          plot.title = element_text(
+            hjust = 0.5,
+            face = "bold",
+            size = (size)
+          ),
+          legend.title = element_text(
+            colour = "black",
+            face = "bold",
+            size = (size * .833)
+          ),
+          legend.text = element_text(
+            colour = "black",
+            size = (size * .833)
+          ),
+          axis.title = element_text(
+            size = (size * .833),
+            colour = "black",
+            face = "bold"
+          ),
+          axis.text.x = element_text(colour = "black", face = "bold", size = (size * .6)),
+          axis.text.y = element_text(colour = "black", face = "bold", size = (size * .667))) 
+    
+}
+create_heatmap(index, size = 15, title = FALSE)
+```
+
 
 ## Example
 
