--- a/README.Rmd
+++ b/README.Rmd
@@ -188,7 +188,7 @@ library(RiskScorescvd)
  # Set the number of rows
  num_rows <- 100
  
- # Create a larger dataset with 100 rows
+ # Create a large dataset with 100 rows
   cohort_xx <- data.frame(
    typical_symptoms.num = as.numeric(sample(0:6, num_rows, replace = TRUE)),
    ecg.normal = as.numeric(sample(c(0, 1), num_rows, replace = TRUE)),
