--- a/README.Rmd
+++ b/README.Rmd
@@ -41,7 +41,7 @@ devtools::install_github("dvicencio/RiskScorescvd")
 ```
 ## Required variables for each risk score
 
-```{r Plot, echo=FALSE, message=FALSE}
+```{r Plot, echo=FALSE, message=FALSE, fig.width=8}
 library(tidyverse)
 index <- c(
   "Age",
