--- a/README.Rmd
+++ b/README.Rmd
@@ -156,7 +156,7 @@ create_heatmap <- function(index, size, title = FALSE) {
                               "Killip Class",
                               "Systolic BP",
                               "Heart Rate",
-                              "Creatine",
+                              "Creatinine",
                               "Previous PCI",
                               "Previous CABG",
                               "Number of Episodes 24h",
