--- a/README.Rmd
+++ b/README.Rmd
@@ -13,9 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# RiskScorescvd
-
-<a href="https://dvicencio.github.io/RiskScorescvd/"><img src="logo.png" align="right" height="240" alt="risk scores website" /></a>
+# RiskScorescvd <a href="https://dvicencio.github.io/RiskScorescvd/"><img src="man/figures/logo.png" align="right" height="220" alt="Hex logo of R package RiskScorescvd. Logo is a rectangular card with a picture of cardiac heart." /></a>
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/dvicencio/RiskScorescvd/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/dvicencio/RiskScorescvd/actions/workflows/R-CMD-check.yaml)
